<resources>
    <string name="app_name">Cabinet</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="desc_exit">If you want to exit, please touch once again</string>
    <string name="permission_fail">Rejected due to no permission</string>
    <string name="create_folder_title">Enter your folder name</string>
    <string name="create_folder_hint">Folder Name</string>
    <string name="rename_file_title">Enter new file name</string>
    <string name="rename_file_hint">New File Name</string>
    <string name="remove_file_alert">The directory is not empty! This action will delete all subdirectories.</string>
    <string name="positive">Okay</string>
    <string name="negative">Cancel</string>
    <string name="popup_delete">Delete</string>
    <string name="popup_rename">Rename</string>
    <string name="popup_copy">Copy</string>
    <string name="bar_search">Search</string>
    <string name="popup_hide">Hide</string>
    <string name="popup_show">Show</string>
    <string name="popup_move_to_clipboard">Move to Clipboard</string>
    <string name="popup_copy_to_clipboard">Copy to Clipboard</string>
    <string name="bar_multi_select">Multi select</string>
    <string name="bar_create_folder">Create Folder</string>
    <string name="bar_import_file">Import File</string>
    <string name="bar_settings">Settings</string>
    <string name="unorganized_files"><![CDATA[<Unorganized files>]]></string>
    <string name="copying_files">Copying files…</string>
    <string name="finish_copy">Copy Finished</string>
</resources>