<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/bar_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_bar_switch"
        android:title="Switch"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/multi_select"
        android:icon="@drawable/ic_tick_box"
        android:title="@string/bar_multi_select"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/app_bar_create_folder"
        android:title="@string/bar_create_folder"
        app:showAsAction="never" />
    <item
        android:id="@+id/app_bar_import"
        android:title="@string/bar_import_file"
        app:showAsAction="never" />
    <item
        android:id="@+id/app_bar_settings"
        android:title="@string/bar_settings"
        android:visible="false"
        app:showAsAction="never" />

</menu>